# Copyright 2018 The Dawn Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# These are variables that are overridable by projects that include Dawn.
# The values in this file are the defaults for when we are building from
# Dawn's repository.

# Whether we are building from Dawn's repository.
# MUST be unset in other projects (will default to false).
dawn_standalone = true

# True if Dawn can access build/, testing/ and other Chrome folders.
dawn_has_build = true

# Defaults for these are set again in dawn_overrides_with_defaults.gni so that
# users of Dawn don't have to set dirs if they happen to use the same as Dawn.

# The paths to Dawn's dependencies
dawn_abseil_dir = "//third_party/abseil-cpp"
dawn_angle_dir = "//third_party/angle"
dawn_jinja2_dir = "//third_party/jinja2"
dawn_glfw_dir = "//third_party/glfw"
dawn_googletest_dir = "//third_party/googletest"
dawn_spirv_tools_dir = "//third_party/vulkan-deps/spirv-tools/src"
dawn_swiftshader_dir = "//third_party/swiftshader"
dawn_vulkan_loader_dir = "//third_party/vulkan-deps/vulkan-loader/src"
dawn_vulkan_validation_layers_dir =
    "//third_party/vulkan-deps/vulkan-validation-layers/src"

# Optional path to a one-liner version file. Default is empty path indicating
# that git should be used to figure out the version.
dawn_version_file = ""
