# Copyright 2019 The Dawn Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# We are building SwiftShader inside Dawn
swiftshader_standalone = false

# Path to SwiftShader
swiftshader_dir = "//third_party/swiftshader"

# Forward to ozone_platform_x11 when inside Dawn's repository
import("../scripts/dawn_features.gni")
ozone_platform_x11 = dawn_use_x11
